--- a/lib_dialog/src/main/res/drawable/ld_shape_all_12_white.xml
+++ b/lib_dialog/src/main/res/drawable/ld_shape_all_12_white.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners
-        android:radius="@dimen/dp_10" />
+        android:radius="@dimen/ld_dp_10" />
 
     <solid
         android:color="@color/ld_colorWhite" />
