--- a/lib_dialog/src/main/res/layout/ld_dialog_plate.xml
+++ b/lib_dialog/src/main/res/layout/ld_dialog_plate.xml
@@ -14,41 +14,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_20"
-            android:layout_marginEnd="@dimen/dp_20"
+            android:layout_marginStart="@dimen/ld_dp_20"
+            android:layout_marginEnd="@dimen/ld_dp_20"
             android:layout_gravity="center"
             android:background="@drawable/ld_shape_all_12_white"
             android:orientation="vertical"
-            android:paddingStart="@dimen/dp_6"
-            android:paddingEnd="@dimen/dp_6">
+            android:paddingStart="@dimen/ld_dp_6"
+            android:paddingEnd="@dimen/ld_dp_6">
 
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/dp_12"
-                android:drawablePadding="@dimen/dp_4"
+                android:layout_marginTop="@dimen/ld_dp_12"
+                android:drawablePadding="@dimen/ld_dp_4"
                 android:gravity="center_horizontal"
                 android:text="请输入车牌号"
                 android:textColor="?android:attr/colorPrimary"
-                android:textSize="@dimen/sp_17"
+                android:textSize="@dimen/ld_sp_17"
                 android:textStyle="bold" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_30">
+                android:layout_marginTop="@dimen/ld_dp_30">
 
                 <TextView
                     android:id="@+id/tv1"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginStart="@dimen/dp_2"
-                    android:layout_marginEnd="@dimen/dp_2"
+                    android:layout_marginStart="@dimen/ld_dp_2"
+                    android:layout_marginEnd="@dimen/ld_dp_2"
                     android:background="@drawable/ld_selector_all_2_1_theme_selected"
                     android:textColor="@color/ld_colorText"
-                    android:textSize="@dimen/sp_14"
+                    android:textSize="@dimen/ld_sp_14"
                     android:gravity="center"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -59,11 +59,11 @@
                     android:id="@+id/tv2"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginStart="@dimen/dp_2"
-                    android:layout_marginEnd="@dimen/dp_2"
+                    android:layout_marginStart="@dimen/ld_dp_2"
+                    android:layout_marginEnd="@dimen/ld_dp_2"
                     android:background="@drawable/ld_selector_all_2_1_theme_selected"
                     android:textColor="@color/ld_colorText"
-                    android:textSize="@dimen/sp_14"
+                    android:textSize="@dimen/ld_sp_14"
                     android:gravity="center"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintLeft_toRightOf="@id/tv1"
@@ -74,11 +74,11 @@
                     android:id="@+id/tv3"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginStart="@dimen/dp_2"
-                    android:layout_marginEnd="@dimen/dp_2"
+                    android:layout_marginStart="@dimen/ld_dp_2"
+                    android:layout_marginEnd="@dimen/ld_dp_2"
                     android:background="@drawable/ld_selector_all_2_1_theme_selected"
                     android:textColor="@color/ld_colorText"
-                    android:textSize="@dimen/sp_14"
+                    android:textSize="@dimen/ld_sp_14"
                     android:gravity="center"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintLeft_toRightOf="@id/tv2"
@@ -89,11 +89,11 @@
                     android:id="@+id/tv4"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginStart="@dimen/dp_2"
-                    android:layout_marginEnd="@dimen/dp_2"
+                    android:layout_marginStart="@dimen/ld_dp_2"
+                    android:layout_marginEnd="@dimen/ld_dp_2"
                     android:background="@drawable/ld_selector_all_2_1_theme_selected"
                     android:textColor="@color/ld_colorText"
-                    android:textSize="@dimen/sp_14"
+                    android:textSize="@dimen/ld_sp_14"
                     android:gravity="center"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintLeft_toRightOf="@id/tv3"
@@ -104,11 +104,11 @@
                     android:id="@+id/tv5"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginStart="@dimen/dp_2"
-                    android:layout_marginEnd="@dimen/dp_2"
+                    android:layout_marginStart="@dimen/ld_dp_2"
+                    android:layout_marginEnd="@dimen/ld_dp_2"
                     android:background="@drawable/ld_selector_all_2_1_theme_selected"
                     android:textColor="@color/ld_colorText"
-                    android:textSize="@dimen/sp_14"
+                    android:textSize="@dimen/ld_sp_14"
                     android:gravity="center"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintLeft_toRightOf="@id/tv4"
@@ -119,11 +119,11 @@
                     android:id="@+id/tv6"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginStart="@dimen/dp_2"
-                    android:layout_marginEnd="@dimen/dp_2"
+                    android:layout_marginStart="@dimen/ld_dp_2"
+                    android:layout_marginEnd="@dimen/ld_dp_2"
                     android:background="@drawable/ld_selector_all_2_1_theme_selected"
                     android:textColor="@color/ld_colorText"
-                    android:textSize="@dimen/sp_14"
+                    android:textSize="@dimen/ld_sp_14"
                     android:gravity="center"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintLeft_toRightOf="@id/tv5"
@@ -134,11 +134,11 @@
                     android:id="@+id/tv7"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginStart="@dimen/dp_2"
-                    android:layout_marginEnd="@dimen/dp_2"
+                    android:layout_marginStart="@dimen/ld_dp_2"
+                    android:layout_marginEnd="@dimen/ld_dp_2"
                     android:background="@drawable/ld_selector_all_2_1_theme_selected"
                     android:textColor="@color/ld_colorText"
-                    android:textSize="@dimen/sp_14"
+                    android:textSize="@dimen/ld_sp_14"
                     android:gravity="center"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintLeft_toRightOf="@id/tv6"
@@ -149,12 +149,12 @@
                     android:id="@+id/tv8"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginStart="@dimen/dp_2"
-                    android:layout_marginEnd="@dimen/dp_2"
+                    android:layout_marginStart="@dimen/ld_dp_2"
+                    android:layout_marginEnd="@dimen/ld_dp_2"
                     android:background="@drawable/ld_selector_all_2_1_theme_selected"
                     android:textColor="@color/ld_colorText"
                     android:textColorHint="@color/ld_colorText3"
-                    android:textSize="@dimen/sp_14"
+                    android:textSize="@dimen/ld_sp_14"
                     android:gravity="center"
                     android:hint="新"
                     app:layout_constraintDimensionRatio="1:1"
@@ -167,21 +167,21 @@
                 android:id="@+id/ll_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_25"
+                android:layout_marginTop="@dimen/ld_dp_25"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_cancel"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/dp_12"
+                    android:layout_marginEnd="@dimen/ld_dp_12"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:paddingTop="@dimen/dp_11"
-                    android:paddingBottom="@dimen/dp_11"
+                    android:paddingTop="@dimen/ld_dp_11"
+                    android:paddingBottom="@dimen/ld_dp_11"
                     android:text="取消"
                     android:textColor="@color/ld_colorText"
-                    android:textSize="@dimen/sp_15" />
+                    android:textSize="@dimen/ld_sp_15" />
 
                 <TextView
                     android:id="@+id/tv_confirm"
@@ -189,11 +189,11 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:paddingTop="@dimen/dp_10"
-                    android:paddingBottom="@dimen/dp_10"
+                    android:paddingTop="@dimen/ld_dp_10"
+                    android:paddingBottom="@dimen/ld_dp_10"
                     android:text="确定"
                     android:textColor="?android:attr/colorPrimary"
-                    android:textSize="@dimen/sp_15" />
+                    android:textSize="@dimen/ld_sp_15" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
