--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,11 @@
         android:textAllCaps="false"
         android:text="CalendarDialog"/>
 
+    <Button
+        android:id="@+id/bt_auto_complete_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="AutoCompleteEditText"/>
+
 </LinearLayout>
